<resources>
    <string name="app_name">ResortManagement</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="error_login">Wrong Username or Password!</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="hint">Please enter your username &amp; password</string>
    <string name="amenity">Amenity Booking</string>
    <string name="amenities">Amenities</string>
    <string name="book_rooms">Book Rooms</string>
    <string name="book">Book</string>
    <string name="booking_history">Booking History:</string>
    <string name="amenities_ordered">Amenities Ordered:</string>
    <string name="cancel">Scrap</string>
    <string name="Excursions">Excursion</string>
    <string name="Restaurant">Restaurant</string>
    <string name="spa">Spa</string>
    <string name="ticket">Issue Tickets</string>
    <string name="amorder">Orders</string>
    <string name="back">Back to Last Page</string>
    <string name="type">Type</string>
    <string name="StartLocation">Origin</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
     <string name="submit">Submit</string>
    <string name="spatype">Price</string>
    <string name="test">fortest</string>
    <string name="foodtype">Food</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="book_id">Id</string>
    <string name="room_num">Room</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="order_id">Id</string>
    <string name="order_date">Ordered</string>
    <string name="service_date">Serv. Date</string>
    <string name="description">Type</string>

    <string-array name="slidemenus">
        <item>Dashboard</item>
        <item>Room Booking</item>
        <item>Amenity Booking</item>
        <item>Repairs</item>
        <item>Logout</item>
    </string-array>

</resources>
