<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_txt"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/book_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_rooms"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/ButtonStyle"/>
                <Button
                    android:id="@+id/amenities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenities"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booking_history"
                android:text="@string/booking_history"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/book_id"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/room_num"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/check_in"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/check_out"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/booking_list"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amenities_ordered"
                android:text="@string/amenities_ordered"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/order_id"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:text="@string/order_date"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/service_date"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/amenities_list"/>
        </LinearLayout>


</LinearLayout>