<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ExcursionFragment">

    <TextView
        android:id="@+id/excursion_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Excursions"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/forfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="41dp">

        <TextView
            android:id="@+id/foodtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="Comment"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forfooddate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/food_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/datePicker1"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>
    </LinearLayout>

    <Button
        android:id="@+id/submit_exc"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        style="@style/ButtonStyle"/>



</LinearLayout>