<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.BookingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_DatePicker"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold">
        </TextView>
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker1"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_DatePicker2"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold">
        </TextView>
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker2"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>
    </LinearLayout>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/room_array">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorLightGreen">
    </TextView>
    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">
    </Spinner>

    <Button
        android:id="@+id/book_rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        style="@style/ButtonStyle"/>
    </LinearLayout>
</ScrollView>